--- a/gradle.properties
+++ b/gradle.properties
@@ -11,9 +11,9 @@ android.useAndroidX=true
 android.enableJetifier=true
 kotlin.code.style=official
 
-POM_DESCRIPTION=Android library for Tinkoff authorization 
+POM_DESCRIPTION=Android library for text formatting
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
-POM_LICENCE_URL=https://github.com/tinkoff-mobile-tech/TinkoffID-Android/blob/master/LICENSE
+POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=tcs
 POM_DEVELOPER_NAME=Tinkoff Credit Systems
@@ -21,6 +21,7 @@ POM_URL=https://github.com/tinkoff-mobile-tech/TinkoffID-Android
 POM_SCM_URL=https://github.com/tinkoff-mobile-tech/TinkoffID-Android
 POM_SCM_CONNECTION=scm:git@github.com:tinkoff-mobile-tech/TinkoffID-Android
 POM_SCM_DEV_CONNECTION=scm:git@github.com:tinkoff-mobile-tech/TinkoffID-Android
+
 
 VERSION_NAME=1.0.0
 VERSION_CODE=1
