--- a/gradle/plugin/publish.gradle
+++ b/gradle/plugin/publish.gradle
@@ -75,21 +75,9 @@ afterEvaluate { project ->
         from android.sourceSets.main.java.srcDirs
     }
 
-    tasks.register('androidJavadocJar', Javadoc) {
-        dependsOn(preBuild)
-        if (JavaVersion.current().isJava8Compatible()) {
-            options.addStringOption('Xdoclint:none', '-quiet')
-        }
-        source = android.sourceSets.main.java.source
-        classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-        classpath += files(android.libraryVariants.collect { variant ->
-            variant.getJavaCompileProvider().get().classpath.files
-        })
-    }
-
     tasks.register('javadocJar', Jar) {
-        dependsOn(tasks.named('androidJavadocJar'))
+        dependsOn dokkaHtml
         archiveClassifier.set('javadoc')
-        from "$buildDir/docs/javadoc"
+        from "$buildDir/dokka"
     }
 }
