--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -18,6 +18,12 @@ ext {
     detektVersion = '1.15.0'
     dokkaVersion = '1.4.20'
     androidPluginVersion = '4.1.1'
+
+    junitVersion = '4.13.1'
+    truthVersion = '1.1.2'
+    robolectricVersion = '4.4'
+    testCoreVersion = '1.3.0'
+    mockwebserverVersion = '4.9.0'
 }
 
 def getVersionName(version) {
