Updated target SDK to 30 and added queries entry to support packages visibility changes

--- a/tinkoff-id/src/main/AndroidManifest.xml
+++ b/tinkoff-id/src/main/AndroidManifest.xml
@@ -19,4 +19,14 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <queries>
+        <intent>
+            <action android:name="android.intent.action.VIEW" />
+            <category android:name="ru.tinkoff.partner.TINKOFF_APP" />
+            <data
+                android:scheme="https"
+                android:host="www.tinkoff.ru" />
+        </intent>
+    </queries>
+
 </manifest>
