--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,14 +1,12 @@
 name: publish
 
 on:
-  push:
-    tags:
-      - '\d+\.\d+\.\d+'
+  workflow_dispatch:
 
 
 jobs:
   publish:
-    uses: tinkoff-mobile-tech/workflow/.github/workflows/publish_android_aar.yml@main
+    uses: tinkoff-mobile-tech/workflows/.github/workflows/android_lib.publish.yml@v1
     secrets:
       gpg_key: ${{ secrets.GPG_KEY }}
       sign_ossrh_gradle_properties: ${{ secrets.SIGN_OSSRH_GRADLE_PROPERTIES }}
