--- a/gradle/plugin/android.gradle
+++ b/gradle/plugin/android.gradle
@@ -49,6 +49,7 @@ android {
             configureEach {
                 includeNonPublic.set(false)
                 noAndroidSdkLink.set(false)
+                suppressInheritedMembers.set(true)
             }
         }
     }
