--- a/gradle/plugin/detekt.gradle
+++ b/gradle/plugin/detekt.gradle
@@ -7,16 +7,21 @@ dependencies {
 }
 
 detekt {
-    version = detektVersion
-    input = files('src')
+    toolVersion = detektVersion
+    source = files("src")
     config = rootProject.files('gradle/plugin/config/detekt.yml')
+}
+
+tasks.named("detekt").configure {
     reports {
-        xml {
-            enabled = false
-        }
-        html {
-            enabled = true
-            destination = file("$project.buildDir/reports/detekt-results-${project.name}.html")
-        }
+        xml.required.set(false)
+
+        sarif.required.set(false)
+
+        txt.required.set(true)
+        txt.outputLocation.set(file("$project.buildDir/reports/detekt-results-${project.name}.txt"))
+
+        html.required.set(true)
+        html.outputLocation.set(file("$project.buildDir/reports/detekt-results-${project.name}.html"))
     }
 }
