--- a/gradle.properties
+++ b/gradle.properties
@@ -11,17 +11,18 @@ android.useAndroidX=true
 android.enableJetifier=true
 kotlin.code.style=official
 
-POM_DESCRIPTION=Android library for Tinkoff authorization 
+POM_DESCRIPTION=Android library for Tinkoff authorization
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=https://github.com/tinkoff-mobile-tech/TinkoffID-Android/blob/master/LICENSE
 POM_LICENCE_DIST=repo
 POM_DEVELOPER_ID=tcs
 POM_DEVELOPER_NAME=Tinkoff Credit Systems
+POM_DEVELOPER_EMAIL=Tinkoff_id@tinkoff.ru
 POM_URL=https://github.com/tinkoff-mobile-tech/TinkoffID-Android
-POM_SCM_URL=https://github.com/tinkoff-mobile-tech/TinkoffID-Android
-POM_SCM_CONNECTION=scm:git@github.com:tinkoff-mobile-tech/TinkoffID-Android
-POM_SCM_DEV_CONNECTION=scm:git@github.com:tinkoff-mobile-tech/TinkoffID-Android
+POM_SCM_URL=https://github.com/tinkoff-mobile-tech/TinkoffID-Android/tree/main
+POM_SCM_CONNECTION=scm:git:git://github.com/tinkoff-mobile-tech/TinkoffID-Android.git
+POM_SCM_DEV_CONNECTION=scm:git:ssh://github.com:tinkoff-mobile-tech/TinkoffID-Android.git
 
 VERSION_NAME=1.0.2
-VERSION_CODE=1
+VERSION_CODE=3
 GROUP=ru.tinkoff.core.tinkoffauth
