MC-5659 revert some unuseful changes

--- a/app-demo/src/main/AndroidManifest.xml
+++ b/app-demo/src/main/AndroidManifest.xml
@@ -23,7 +23,9 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <intent-filter android:autoVerify="true">
+            <intent-filter
+                android:autoVerify="true"
+                tools:targetApi="m">
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.BROWSABLE" />
