--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -24,6 +24,9 @@ ext {
     truthVersion = '1.1.3'
     robolectricVersion = '4.8'
     testCoreVersion = '1.4.0-rc01' // 1.3.0 fails when targeting API 31
+    espressoVersion = '3.4.0'
+    testRuleVersion = '1.4.0'
+    uiautomatorVersion = '2.2.0'
 }
 
 def getVersionName(version) {
