--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -7,19 +7,26 @@ ext {
     authCode = VERSION_CODE.toInteger()
     authVersion = getVersionName(VERSION_NAME)
 
-    constraintLayoutVersion = '2.1.3'
-    rxJavaVersion = '2.2.21'
-    rxAndroidVersion = '2.1.1'
+    // tinkoff libs
+    sslTrustedCertsVersion = '1.11.2'
 
+    // android libs
     kotlinVersion = '1.6.21'
     appCompatVersion = '1.4.1'
     materialVersion = '1.5.0'
-    okHttpVersion = '4.9.3'
-
-    detektVersion = '1.20.0'
-    dokkaVersion = '1.6.21'
+    constraintLayoutVersion = '2.1.3'
     androidPluginVersion = '7.1.3'
 
+    // 3-rd party libs
+    rxJavaVersion = '2.2.21'
+    rxAndroidVersion = '2.1.1'
+    okHttpVersion = '4.9.3'
+
+    // documentation & quality libs
+    detektVersion = '1.20.0'
+    dokkaVersion = '1.6.21'
+
+    // testing automation libs
     junitVersion = '4.13.2'
     truthVersion = '1.1.3'
     robolectricVersion = '4.8'
