--- a/gradle/versions.gradle
+++ b/gradle/versions.gradle
@@ -1,7 +1,7 @@
 ext {
-    compileSdkVersion = 31
+    compileSdkVersion = 33
     minSdkVersion = 21
-    targetSdkVersion = 31
+    targetSdkVersion = 33
 
     isRelease = project.hasProperty('release')
     authCode = VERSION_CODE.toInteger()
@@ -11,11 +11,11 @@ ext {
     sslTrustedCertsVersion = '1.11.2'
 
     // android libs
-    kotlinVersion = '1.6.21'
-    appCompatVersion = '1.4.1'
-    materialVersion = '1.5.0'
-    constraintLayoutVersion = '2.1.3'
-    androidPluginVersion = '7.1.3'
+    kotlinVersion = '1.8.10'
+    appCompatVersion = '1.6.1'
+    materialVersion = '1.9.0'
+    constraintLayoutVersion = '2.1.4'
+    androidPluginVersion = '7.4.2'
 
     // 3-rd party libs
     rxJavaVersion = '2.2.21'
@@ -30,9 +30,9 @@ ext {
     junitVersion = '4.13.2'
     truthVersion = '1.1.3'
     robolectricVersion = '4.8'
-    testCoreVersion = '1.4.0-rc01' // 1.3.0 fails when targeting API 31
-    espressoVersion = '3.4.0'
-    testRuleVersion = '1.4.0'
+    testCoreVersion = '1.5.0'
+    espressoVersion = '3.5.1'
+    testRuleVersion = '1.5.0'
     uiautomatorVersion = '2.2.0'
 }
 
