--- a/tinkoff-id/src/main/AndroidManifest.xml
+++ b/tinkoff-id/src/main/AndroidManifest.xml
@@ -29,4 +29,9 @@
         </intent>
     </queries>
 
+    <application>
+        <activity android:name=".ui.webView.TinkoffWebViewAuthActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"/>
+    </application>
+
 </manifest>
